Change [post] /users to [post] /register
